--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -1,3 +1,3 @@
 product.properties=Product Profile Dev
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
-app.testProp=Property of test update again 1
+app.testProp=Property of test update again 1 again
